# gisei

./: CMakeLists.txt  README.md
Assets/Lang/: en.txt  pt.txt
Assets/Levels/: boss1_Blocos.csv  boss1_Entradas.csv  boss1_Objetos.csv  boss2_Blocos.csv  boss2_Entradas.csv  boss2_Inimigos.csv  boss2_Objetos.csv  level1-1.csv  level1-1.tmx  level1-test_Tile Layer 1.csv  level1-test_Tile Layer 2.csv  level1-test_Tile Layer 3.csv  level1.csv  level1_Blocos.csv  level1_Entradas.csv  level1_Inimigos.csv  level1_Objetos.csv  level2_Blocos.csv  level2_Entradas.csv  level2_Inimigos.csv  level2_Objetos.csv
Assets/Sprites/Mario/: texture.json
Assets/Sprites/Samurai/: texture.json
Shaders/: Base.frag  Base.vert
Source/: AudioSystem.cpp  AudioSystem.h  CSV.h  Game.cpp  Game.h  Json.h  LanguageManager.cpp  LanguageManager.h  Main.cpp  Math.cpp  Math.h  Random.h
Source/Actors/: Actor.cpp  Actor.h  Arrow.cpp  Arrow.h  Block.cpp  Block.h  BossEnemy.h  Dart.cpp  Dart.h  Goomba.cpp  Goomba.h  KarasuTengu.cpp  KarasuTengu.h  Key.cpp  Key.h  Mario.cpp  Mario.h  Mushroom.cpp  Mushroom.h  Ninja.cpp  Ninja.h  ParallaxBackground.cpp  ParallaxBackground.h  Samurai.cpp  Samurai.h  SkeletonArcher.cpp  SkeletonArcher.h  SkeletonSpearman.cpp  SkeletonSpearman.h  SkeletonWarrior.cpp  SkeletonWarrior.h  Spawner.cpp  Spawner.h  YamabushiTengu.cpp  YamabushiTengu.h  Yokai.cpp  Yokai.h
Source/Components/: Component.cpp  Component.h  ParticleSystemComponent.cpp  ParticleSystemComponent.h
Source/Components/Drawing/: AnimatorComponent.cpp  AnimatorComponent.h  DashAfterimageComponent.cpp  DashAfterimageComponent.h  DashSmokeComponent.cpp  DashSmokeComponent.h  DrawComponent.cpp  DrawComponent.h  ParallaxComponent.cpp  ParallaxComponent.h  RectComponent.cpp  RectComponent.h  SpriteComponent.cpp  SpriteComponent.h
Source/Components/Physics/: AABBColliderComponent.cpp  AABBColliderComponent.h  RigidBodyComponent.cpp  RigidBodyComponent.h
Source/Renderer/: Font.cpp  Font.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp
Source/UI/: AudioSystem.cpp  UIButton.cpp  UIButton.h  UIElement.h  UIImage.cpp  UIImage.h  UIRect.cpp  UIRect.h  UIText.cpp  UIText.h
Source/UI/Screens/: ControlsMenu.cpp  ControlsMenu.h  GameOver.cpp  GameOver.h  HUD.cpp  HUD.h  IntroCrawl.cpp  IntroCrawl.h  MainMenu.cpp  MainMenu.h  PauseMenu.cpp  PauseMenu.h  SettingsMenu.cpp  SettingsMenu.h  UIScreen.cpp  UIScreen.h  YouWin.cpp  YouWin.h
